[gd_scene load_steps=4 format=3 uid="uid://vyck4p77p855"]

[ext_resource type="Script" path="res://Scripts/pausemenu.gd" id="1_rat14"]

[sub_resource type="Gradient" id="Gradient_qq3bj"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0.709804)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7bkfy"]
gradient = SubResource("Gradient_qq3bj")
fill_to = Vector2(0, 1)

[node name="Pause Menu" type="CanvasLayer"]
layer = 3
script = ExtResource("1_rat14")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576.5, 323.5)
scale = Vector2(17.9531, 10.1094)
texture = SubResource("GradientTexture2D_7bkfy")

[node name="page2" type="Node2D" parent="."]

[node name="Back" type="Button" parent="page2"]
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(1.79, 1.79)
text = "Back"

[node name="CheckButton" type="CheckButton" parent="page2"]
offset_left = 479.0
offset_top = 92.0
offset_right = 606.0
offset_bottom = 123.0
button_pressed = true
text = "Fullscreen"

[node name="page1" type="Node2D" parent="."]

[node name="Button" type="Button" parent="page1"]
offset_left = 494.0
offset_top = 294.0
offset_right = 565.0
offset_bottom = 327.0
scale = Vector2(1.56, 1.56)
text = "Settings"

[node name="quit" type="Button" parent="page1"]
offset_left = 503.0
offset_top = 370.0
offset_right = 595.0
offset_bottom = 401.0
tooltip_text = "(will save since the last checkpoint)"
text = "Quit Game"

[node name="RichTextLabel" type="RichTextLabel" parent="page1"]
offset_left = 397.0
offset_top = 140.0
offset_right = 507.0
offset_bottom = 163.0
scale = Vector2(2.8, 2.8)
text = "Game Paused"

[connection signal="pressed" from="page2/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="page2/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="page1/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="page1/quit" to="." method="_on_quit_pressed"]
